refactor all entities